--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,10 @@
     <button id="toggle-mode-btn" class="toggle-button"><i class="fas fa-sun"></i></button>
     <div class="chat-container">
         <div class="chat-box" id="chat-box">
-            <div class="chat-message bot-message">Hello! How can I help you today?</div>
+            <div class="chat-message bot-message">Hello! What can I help you find today?</div>
         </div>
         <div class="chat-input-container">
-            <input type="text" id="user-input" placeholder="Type a message..." autofocus>
+            <input type="text" id="user-input" placeholder="e.g. 'find studies on sleep', 'who is studying cocaine addiction?', 'is anyone looking at COPD in women?', etc." autofocus>
             <button id="send-btn">Send</button>
         </div>
     </div>
