--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
 <body class="dark-mode">
     <button id="toggle-mode-btn" class="toggle-button"><i class="fas fa-sun"></i></button>
     <div class="button-container">
-        <h5>Find studies on:</h5>
+        <h5>Topics of interest:</h5>
+        <button class="query-btn" data-query="Find studies on asthma, provide links if possible">asthma</button>
         <button class="query-btn" data-query="What are some major findings of lung disease research in women?">lung disease in women</button>
         <button class="query-btn" data-query="Find recent studies on cocaine addiction">cocaine addiction</button>
         <button class="query-btn" data-query="Is anyone investigating sleep and cancer?">sleep and cancer</button>
