--- a/static/style.css
+++ b/static/style.css
@@ -36,6 +36,10 @@ body.dark-mode #toggle-mode-btn {
     color: #ffdd00;
 }
 
+body.dark-mode #toggle-mode-btn:hover {
+    color: #ffdd00;
+}
+
 .button-container {
     display: flex;
     align-items: stretch;
@@ -55,11 +59,11 @@ body.dark-mode #toggle-mode-btn {
     margin: 10px 0;
     padding: 15px 20px;
     background-color: #808080; /* Gray fill */
-    color: #fff;
+    color: #2c2c2c;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s, color 0.3s;
     flex-grow: 1;
     text-align: center;
     margin: 0 20px;
@@ -71,6 +75,11 @@ body.dark-mode #toggle-mode-btn {
 
 body.dark-mode .query-btn {
     background-color: #666666; /* Gray fill for dark mode */
+    color: #fff; /* White text for dark mode */
+}
+
+body.dark-mode .query-btn:hover {
+    background-color: #4d4d4d; /* Darker gray on hover for dark mode */
 }
 
 .chat-container {
@@ -95,7 +104,7 @@ body.dark-mode .chat-container {
     flex-grow: 1;
     overflow-y: auto;
     padding: 10px;
-    color: black; /* Keep text black in chat box */
+    color: rgb(57, 56, 56); /* Keep text black in chat box */
 }
 
 .chat-message {
@@ -118,7 +127,7 @@ body.dark-mode .user-message {
 }
 
 body.light-mode .bot-message {
-    background-color: #5793f9;
+    background-color: #86b2ff;
 }
 
 .chat-input-container {
@@ -153,7 +162,7 @@ button {
     width: 80px;
     padding: 10px;
     border: none;
-    background-color: #007bff;
+    background-color: #35944b;
     color: #fff;
     cursor: pointer;
     border-radius: 5px;
@@ -162,11 +171,15 @@ button {
 }
 
 button:hover {
-    background-color: #005bb5;
+    background-color: #178130;
 }
 
 body.dark-mode button {
-    background-color: #005bb5;
+    background-color: #529060;
+}
+
+body.dark-mode button:hover {
+    background-color: #3ea147;
 }
 
 /* Spinner Styles */
