--- a/static/style.css
+++ b/static/style.css
@@ -2,13 +2,14 @@ body {
     font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start; /* center will bring window to center */
     align-items: center;
     height: 100vh;
-    margin: 0;
+    margin: 50px; /* margin from top */
     transition: background-color 0.3s, color 0.3s;
     color: #2c2c2c; /* Default to light mode colors */
     background-color: #f4f4f9; /* Default to light mode background */
+    overflow: hidden; /* Prevent horizontal scroll */
 }
 
 body.dark-mode {
@@ -52,7 +53,7 @@ body.dark-mode #toggle-mode-btn:hover {
     margin: 0;
     margin-right: 20px;
     color: inherit;
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 .query-btn {
@@ -94,6 +95,7 @@ body.dark-mode .query-btn:hover {
     align-items: stretch;
     transition: background-color 0.3s, color 0.3s;
     min-height: 200px; /* Initial minimal height */
+    margin-bottom: 20px;
 }
 
 body.dark-mode .chat-container {
@@ -105,6 +107,7 @@ body.dark-mode .chat-container {
     overflow-y: auto;
     padding: 10px;
     color: rgb(57, 56, 56); /* Keep text black in chat box */
+    
 }
 
 .chat-message {
