--- a/static/style.css
+++ b/static/style.css
@@ -59,8 +59,8 @@ body.dark-mode #toggle-mode-btn:hover {
 .query-btn {
     margin: 10px 0;
     padding: 15px 20px;
-    background-color: #616265; /* Gray fill */
-    color: #393939;
+    background-color: #fff; /* Gray fill */
+    color: #616265;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -84,7 +84,7 @@ body.dark-mode .query-btn:hover {
 }
 
 .chat-container {
-    background-color: #616265;
+    background-color: #fff;
     width: 75%;  /* Wider chat window */
     max-height: 80%; /* Expand to 80% of the browser window height */
     border-radius: 8px;
@@ -106,7 +106,7 @@ body.dark-mode .chat-container {
     flex-grow: 1;
     overflow-y: auto;
     padding: 10px;
-    color: rgb(57, 56, 56); /* Keep text black in chat box */
+    color: rgb(57, 56, 56);
     
 }
 
@@ -117,32 +117,35 @@ body.dark-mode .chat-container {
 }
 
 .user-message {
-    background-color: #1a568c;
+    background-color: #f4f4f6;
     text-align: right;
+    color: #3c3c3c;
+
 }
 
 body.dark-mode .user-message {
-    background-color: #1a568c;
-    color: #fff;
+    background-color: #616265;
+    color: #f4f4f9;
 }
 
 .bot-message {
-    background-color: #41ABF5;
+    background-color: #f4f4f9;
 }
 
 body.dark-mode .bot-message {
-    color: #fff;
+    color: #616265;
 }
 
 body.light-mode .bot-message {
-    background-color: #41ABF5;
+    background-color: #fff;
+    border: #4d4d4d
 }
 
 .chat-input-container {
     display: flex;
-    border-top: 1px solid #ddd;
+    border-top: 1px solid #fff;
     padding: 10px;
-    background-color: #616265;
+    /* background-color: #616265; */
 }
 
 body.dark-mode .chat-input-container {
@@ -167,7 +170,7 @@ body.dark-mode input[type="text"] {
 }
 
 button {
-    width: 80px;
+    width: 200px;
     padding: 10px;
     border: none;
     background-color: #1a568c;
