--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
     <button id="toggle-mode-btn" class="toggle-button"><i class="fas fa-sun"></i></button>
 
     <div class="banner-container">
-        <img src="{{ banner_image_url }}" alt="Banner" class="banner">
+        <!-- <img src="{{ banner_image_url }}" alt="Banner" class="banner"> -->
     </div>
     <br/>
     <div class="button-container">
