--- a/templates/index.html
+++ b/templates/index.html
@@ -165,7 +165,7 @@
         </div>
     </div>
     <div class="contact-us">
-        <p>For questions or feedback, please vist <a href="http://link-to-google-form">[link to google form]</a>. For more information about the BioData Catalyst, please visit <a href="https://biodatacatalyst.nhlbi.nih.gov/">https://biodatacatalyst.nhlbi.nih.gov/</a>.
+        <p>For questions or feedback, please visit <a href="http://link-to-google-form">[link to google form]</a>. For more information about the BioData Catalyst, please visit <a href="https://biodatacatalyst.nhlbi.nih.gov/">https://biodatacatalyst.nhlbi.nih.gov/</a>.
         </p>
     </div>
     <div class="disclaimer-container">
